{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 32,
  "lineage": "37cb99db-662b-5c03-3dc1-1cd293caff26",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398053934:vpc/vpc-0784edd3e24efd9a1",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b769bc89f5a3f24b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0e01c3b158b533679",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0784edd3e24efd9a1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05e997c9687dbefd5",
            "owner_id": "767398053934"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767398053934:loadbalancer/app/backend-alb/3dd893a25f460c2d",
            "arn_suffix": "app/backend-alb/3dd893a25f460c2d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "backend-alb-1303333898.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:767398053934:loadbalancer/app/backend-alb/3dd893a25f460c2d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-alb",
            "security_groups": [
              "sg-0943d5939f23124ab"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00570455c55ce452e"
              },
              {
                "subnet_id": "subnet-01bbaa758588a79ab"
              },
              {
                "subnet_id": "subnet-02bdc4ec59c3264ce"
              },
              {
                "subnet_id": "subnet-03e9126ae9b431ebe"
              },
              {
                "subnet_id": "subnet-0894abf7437c09cb2"
              },
              {
                "subnet_id": "subnet-09a887738a5fb5ab9"
              }
            ],
            "subnets": [
              "subnet-00570455c55ce452e",
              "subnet-01bbaa758588a79ab",
              "subnet-02bdc4ec59c3264ce",
              "subnet-03e9126ae9b431ebe",
              "subnet-0894abf7437c09cb2",
              "subnet-09a887738a5fb5ab9"
            ],
            "tags_all": {
              "Owner": "Heredia",
              "Project": "Distributed-Exam",
              "Service": "Backend"
            },
            "vpc_id": "vpc-0784edd3e24efd9a1",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.backend_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767398053934:listener/app/backend-alb/3dd893a25f460c2d/699b44a41fcc85d6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:767398053934:targetgroup/backend-tg/df806d4c29dcaf09",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767398053934:listener/app/backend-alb/3dd893a25f460c2d/699b44a41fcc85d6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:767398053934:loadbalancer/app/backend-alb/3dd893a25f460c2d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Owner": "Heredia",
              "Project": "Distributed-Exam",
              "Service": "Backend"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.backend_alb",
            "aws_lb_target_group.backend_tg",
            "aws_security_group.backend_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:767398053934:targetgroup/backend-tg/df806d4c29dcaf09",
            "arn_suffix": "targetgroup/backend-tg/df806d4c29dcaf09",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:767398053934:targetgroup/backend-tg/df806d4c29dcaf09",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "backend-tg",
            "port": 3002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Owner": "Heredia",
              "Project": "Distributed-Exam",
              "Service": "Backend"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0784edd3e24efd9a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398053934:security-group/sg-0943d5939f23124ab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0943d5939f23124ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3002
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "backend-sg",
            "name_prefix": "",
            "owner_id": "767398053934",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Owner": "Heredia",
              "Project": "Distributed-Exam",
              "Service": "Backend"
            },
            "timeouts": null,
            "vpc_id": "vpc-0784edd3e24efd9a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}